[package]
name = "quake-bspc"
version = "0.1.5"
edition = "2021"
authors = ["Joseph Azevedo <jazevedo620@gmail.com>"]
description = """Asynchronous wrapper for running the Quake BSP compiler \
'bspc' as a child process"""
readme = "README.md"
repository = "https://github.com/jazeved0/quake-bspc"
# 'bspc' itself is licensed under GPL
# (https://github.com/bnoordhuis/bspc/blob/master/LICENSE),
# but this wrapper doesn't dynamically link or use any of the code from 'bspc'
# (instead, it just runs the 'bspc' binary as an opaque child process and deals
# with the input/output via CLI args, the filesystem, and the exit code).
# Moreover, the library itself does not redistribute 'bspc' in any way (which
# must be downloaded separately by the user).
# This repository does contain a copy of the 'bspc' binary, but it is only used
# for testing purposes.
license = "MIT OR Apache-2.0"
keywords = ["quake", "gamedev", "bsp", "map", "aas"]
categories = ["rendering::data-formats", "game-development"]

[lib]
name = "bspc"

[dependencies]
derive_builder = "0.11"
tempfile = "3.3"
thiserror = "1"
tokio = { version = "1", features = ["process", "fs", "macros", "io-util"], default-features = true }
tokio-util = { version = "0.7", features = [], default-features = true }

[dependencies.windows]
version = "0.43"
features = [
    "Win32_System_Threading",
]

[dev-dependencies]
tokio-test = "0.4.2"
